unpackaged/main/default/objects/Account/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <description>A field to enter meeting notes</description>
    <label>Meeting Notes</label>
    <length>200</length>
    <type>Text</type>
</CustomField>