unpackaged/main/default/objects/Account/fields/Meetings_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Notes__c</fullName>
    <description>Meeting notes. What happened?</description>
    <label>Meetings Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>