unpackaged/main/default/objects/Account/fields/Merge_Test__c.field-meta.xml
<CustomField>
    <fullName>Merge_Test__c</fullName>
    <description>field to test out a merge conflict for a POC</description>
    <inlineHelpText>This field is used as a test and a test only. For testing purposes</inlineHelpText>
    <label>Merge Test</label>
    <length>225</length>
    <type>Text</type>
</CustomField>