unpackaged/main/default/objects/Account/fields/Number_of_End_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_End_Users__c</fullName>
    <description>Number of End Users</description>
    <label>Number of End Users</label>
    <length>200</length>
    <type>Text</type>
</CustomField>