unpackaged/main/default/objects/Account/fields/Services_provided__c.field-meta.xml
<CustomField>
    <fullName>Services_provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates whether or not professional services were provided alongside product</description>
    <label>Professional services provided?</label>
    <type>Checkbox</type>
</CustomField>